fixed Width of elements on mobile vieW to use more space

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -173,7 +173,7 @@
 		align-items: center;
 		width: 40%;
 		transform: translateX(-100%);
-		transition: transform 0.5s ease-in;
+		transition: transform 0.3s ease-in;
 	}
 
 	.navLinks li {
@@ -219,5 +219,11 @@
 		height: 30px;
 		width: 140px;
 		font-size: 0.875rem;
+	}
+}
+
+@media screen and (max-width:375px) {
+	.heroContent h1 {
+		padding: 0 20px;
 	}
 }
