--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -319,6 +319,7 @@
 .whyMintyCTA {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	font-size: 1.125rem;
     text-decoration: underline;
     text-underline-offset: 5px;
@@ -482,7 +483,7 @@
 	}
 
 	.metrics {
-		margin-top: -30px;
+		margin-top: -75px;
 	}
 
 	.metricsCard {
@@ -563,7 +564,7 @@
 	}
 
 	.whyMintyCTA {
-		justify-content: center;
+		justify-content: flex-start;
 		font-size: 0.775rem;
 	}
 
@@ -656,16 +657,18 @@
 		padding: 0 40px;
 	}
 
-	.servicesOneTitle {
-
+	.servicesOneCTA {
+		justify-content: center;
 	}
 
 	.aboutServicesOne {
 		margin-right: 0;
+		max-width: 309px;
 	}
 
 	.aboutServicesTwo {
 		margin-right: 0;
+		max-width: 309px;
 	}
 
 	.servicesTwo {
@@ -689,7 +692,7 @@
 		margin-bottom: 40px;
 		max-width: 380px;
 		line-height: 1.3;
-		margin: 40px auto;
+		margin: 11px auto;
 		/* text-align: center; */
 		/* margin-right: 0; */
 	}
